# fae

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: autocorrection.rs  main.rs  out.rs
